# mcpelauncher-ui-qt

./: .gitignore  .gitmodules  CMakeLists.txt  CPackSettings.cmake  CenteredRectangle.qml  EditProfileWindow.qml  GameLogWindow.qml  GoogleTosApprovalWindow.qml  LauncherLogin.qml  LauncherMain.qml  LauncherSettingsWindow.qml  MinecraftNews.qml  ProfileComboBox.qml  apkextractiontask.cpp  apkextractiontask.h  archivalversionlist.cpp  archivalversionlist.h  archivalversionlist.qrc  cpuid.cpp  cpuid.h  gamelauncher.cpp  gamelauncher.h  gamepad.h  googleaccount.h  googleapkdownloadtask.cpp  googleapkdownloadtask.h  googleloginhelper.cpp  googleloginhelper.h  googleplayapi.cpp  googleplayapi.h  googleversionchannel.cpp  googleversionchannel.h  launcherapp.cpp  launcherapp.h  launcherapp_osx.mm  launchersettings.h  main.cpp  main.qml  mcpelauncher-ui-qt.desktop  mcpelauncher_de.ts  (+17 more)
.github/workflows/: cherry_pick.yml  ci.yml
Resources/: mcpelauncher-icon.icns
ThemedControls/: MBusyIndicator.qml  MButton.qml  MCheckBox.qml  MComboBox.qml  MProgressBar.qml  MTextField.qml  PlayButton.qml  TransparentButton.qml
ext/: glfw.cmake
qml/: ApkImportHelper.qml  ApkImportWindow.qml  CenteredRectangle.qml  EditProfileWindow.qml  GameLogWindow.qml  GamepadInputField.qml  GampadTool.qml  GoogleTosApprovalWindow.qml  LauncherAgree.qml  LauncherBase.qml  LauncherChangeLog.qml  LauncherLogin.qml  LauncherMain.qml  LauncherSettingsAbout.qml  LauncherSettingsDev.qml  LauncherSettingsGeneral.qml  LauncherSettingsStorage.qml  LauncherSettingsVersions.qml  LauncherSettingsWindow.qml  LauncherUnsupported.qml  MinecraftNews.qml  ProfileComboBox.qml  TroubleshooterWindow.qml  main.qml
qml/ThemedControls/: MBusyIndicator.qml  MButton.qml  MCheckBox.qml  MComboBox.qml  MProgressBar.qml  MTabButton.qml  MTextField.qml  PlayButton.qml  TransparentButton.qml
